[gd_scene load_steps=4 format=3 uid="uid://wfgd2iwe8nrj"]

[ext_resource type="Script" path="res://scenes/objects/inventory/ItemList.gd" id="1_bbre2"]
[ext_resource type="StyleBox" uid="uid://br5b6myxh3usi" path="res://styles/black.tres" id="2_8llke"]
[ext_resource type="StyleBox" uid="uid://sjot4rnenycb" path="res://styles/battle_action_button.tres" id="3_b3an0"]

[node name="ChooseItem" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2864.0
offset_top = 3496.0
offset_right = 2864.0
offset_bottom = 3496.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_bbre2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1096.0
offset_top = -374.0
offset_right = 1096.0
offset_bottom = 554.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="ItemList" parent="MarginContainer"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 150

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.489
anchor_top = 0.5
anchor_right = 0.511
anchor_bottom = 0.519
offset_left = -1088.08
offset_top = 545.0
offset_right = 1088.08
offset_bottom = 789.74
theme_override_constants/separation = 50
alignment = 2

[node name="Separator" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = ExtResource("2_8llke")
theme_override_styles/hover = ExtResource("2_8llke")
theme_override_styles/pressed = ExtResource("2_8llke")
theme_override_styles/focus = ExtResource("3_b3an0")
text = "BUTTON_BACK"

[connection signal="item_activated" from="MarginContainer/ItemList" to="MarginContainer/ItemList" method="_on_item_activated"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
